--- a/tea.yaml
+++ b/tea.yaml
@@ -1,3 +1,6 @@
-➢ Click on "Register your first project" and search for any unregistered project;
-➢ Press "Next Step", click on "Manual Registration" and press "Continue";
-➢ Click "Copy to Clipboard" under the Constitution Review section on the next page.
+# https://tea.xyz/what-is-this-file
+---
+version: 1.0.0
+codeOwners:
+  - '0x645936164Dcd24E85c64df4315Cd2f7BDf6B5b5B'
+quorum: 1
